[project]
name = "cyjs"
dynamic = ["version"]
description = "A Next Generation QuickJS Intrepreter for cython & python"
readme = "README.md"
authors = [
    { name = "Vizonex", email = "VizonexBusiness@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[tool.cibuildwheel]
build-frontend = "build"
enable = ["cpython-freethreading"]


[build-system]
requires = ["setuptools", "cython", "wheel"]


[tool.setuptools]
zip-safe = false
packages = ['cyjs']

[tool.setuptools.dynamic]
version = {attr = "cyjs.__version__"}
